# language-of-work

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/plans/: careers_page_archaeology_phase_1_aa51e2d2.plan.md
axes/: altruism.yaml  control.yaml  dei_stance.yaml  inclusion.yaml  meritocracy.yaml  performance.yaml
axes/built/: altruism.json  control.json  dei_stance.json  inclusion.json  meritocracy.json  performance.json
axes/candidates/: altruism.md  control.md
data/: filings_config.json
data/amazon/: classifications.json  dei_evidence.json  dei_investor_evidence.json  dei_investor_scores.parquet  dei_phrases.json  dei_register_agreement.json  dei_register_overrides.json  dei_register_review.md  dei_registers.json  dei_scores.parquet  dei_stance_evidence.json  dei_stance_review.md  dei_stance_scores.parquet  dei_stances.json  dei_validation.json  dei_validation.md  discovery_report.md  (+15 more)
docs/: manual_capture.md  the-language-of-work-plan.md
scripts/: build_axes.py  classify_chunks.py  classify_dei_register.py  classify_dei_stance.py  embed_chunks.py  embed_investor.py  expand_links.py  export_dei_web.py  export_story_web.py  export_web.py  extract_chunks.py  fetch_filings.py  fetch_snapshots.py  generate_axis_candidates.py  ingest_manual_html.py  label_dei_sample.py  label_sample.py  make_chart.py  recover_spa.py  score_axes.py  score_dei.py  score_dei_investor.py  score_dei_stance.py  score_performance.py  track_dei_phrases.py  track_performance_phrases.py  validate.py  validate_dei.py
web/: .npmrc  package-lock.json  package.json
(+242 files in other folders)
