[project]
name = "lowork"
version = "0.1.0"
description = "The Language of Work — careers page archaeology pipeline"
requires-python = ">=3.12,<3.14"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "trafilatura>=1.12",
    "openai>=1.50",
    "anthropic>=0.40",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "numpy>=2.0",
    "scipy>=1.14",
    "plotly>=5.24",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "langdetect>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lowork"]
